# Prog4Pengo

./: CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
Data/: level01.txt  level02.txt  level03.txt
Game/: CMakeLists.txt  FunctionCommand.h  HighScores.cpp  HighScores.h  IceBlock.cpp  IceBlock.h  LevelGrid.cpp  LevelGrid.h  LevelLoader.cpp  LevelLoader.h  Main.cpp  MenuCommands.cpp  MenuCommands.h  MoveCommand.h  Pengo.cpp  Pengo.h  PengoComponent.cpp  PengoComponent.h  PlayerRegistry.h  Scoring.h  SnoBeeComponent.cpp  SnoBeeComponent.h  SnoBeeCounterComponent.h  SnoBeeRegistry.h  Sounds.h
Game/States/: DyingState.cpp  DyingState.h  GameMode.h  GameOverState.cpp  GameOverState.h  MenuCommands.cpp  MenuCommands.h  MenuState.cpp  MenuState.h  PengoState.h  PlayingState.cpp  PlayingState.h  PushingState.cpp  PushingState.h  StandingState.cpp  StandingState.h  WalkingState.cpp  WalkingState.h
Minigin/: AddPointsCommand.h  CMakeLists.txt  CacheComponent.cpp  CacheComponent.h  Command.h  Component.h  DieCommand.h  FPSComponent.cpp  FPSComponent.h  GameEvents.h  GameObject.cpp  GameObject.h  GameState.h  GameStateMachine.h  GameTime.h  Gamepad.cpp  Gamepad.h  Gamepad_SDL.cpp  HealthComponent.h  InputManager.cpp  InputManager.h  LivesDisplayComponent.h  Main.cpp  Minigin.cpp  Minigin.h  MoveCommand.h  NullSoundSystem.h  OrbitComponent.h  PointsComponent.h  PointsDisplayComponent.h  RenderComponent.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  RotatorComponent.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ServiceLocator.cpp  (+12 more)
web/: index.html
